--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,21 +32,23 @@
                                             href="{{ path('album_details', {'id': album.id}) }}"
                                             class="link-underline link-underline-opacity-0 text-white">Detalls</a>
                                 </button>
-                                {% if album not in app.user.likes %}
-                                    <button type="submit" class="btn btn-warning me-2 mb-3 text-white">
-                                        <a href="{{ path('like_album', {'id': album.id}) }}"
-                                           class="link-underline link-underline-opacity-0 text-white">
-                                            <i class="bi bi-star"></i></a>
-                                    </button>
+                                <div data-controller="hello">
+                                    {% if album not in app.user.likes %}
+                                        <button type="submit" class="btn btn-warning me-2 mb-3 text-white" data-action="click->hello#like">
+                                            <a href="{{ path('like_album', {'id': album.id}) }}"
+                                               class="link-underline link-underline-opacity-0 text-white">
+                                                <i class="bi bi-star"></i></a>
+                                        </button>
                                     {% else %}
                                         <button type="submit" class="btn btn-danger me-2 mb-3 text-white">
                                             <a class="link-underline link-underline-opacity-0 text-white">
                                                 <i class="bi bi-star-half"></i></a>
                                         </button>
-                                {% endif %}
+                                    {% endif %}
+                                </div>
                             </div>
-                                <p class="mb-3 me-1 mt-3 d-flex justify-content-end">Likes: {{ album.users | length }}
-                                </p>
+                            <p class="mb-3 me-1 mt-3 d-flex justify-content-end">Likes: {{ album.users | length }}
+                            </p>
                         </div>
                     </div>
                 </div>
