--- a/templates/band/index.html.twig
+++ b/templates/band/index.html.twig
@@ -21,7 +21,7 @@
     <div class="container d-flex justify-content-center text-center">
         <div class="row">
             <div class="col-12">
-                <table class="table">
+                <table class="table table-striped table-hover">
                     <thead>
                     <tr class="table-danger border border-dark-subtle">
                         <th>Id</th>
