--- a/templates/song/index.html.twig
+++ b/templates/song/index.html.twig
@@ -38,7 +38,7 @@
     <div class="container d-flex justify-content-center text-center">
         <div class="row">
             <div class="col-12">
-                <table class="table">
+                <table class="table table-striped table-hover">
                     <thead>
                     <tr class="table-success border border-dark-subtle">
                         <th>Id</th>
