--- a/templates/album/_form.html.twig
+++ b/templates/album/_form.html.twig
@@ -8,7 +8,7 @@
             {{ form_row(form.releasedAt, {'label': 'Data de llançament:','attr': {'class': 'form-control','type': 'date', 'value': form.vars.value.releasedAt|date('Y-m-d')}}) }}
         </div>
         <div class="col-6 mb-5">
-            {{ form_row(form.band, {'label': 'Banda', 'attr': {'class': 'form-control'}}) }}
+            {{ form_row(form.band, {'label': 'Banda'}) }}
         </div>
         <div class="col-6">
             {{ form_row(form.coverFile, {'label': 'Portada', 'attr': {'class': 'form-control'}}) }}
