--- a/templates/album/new.html.twig
+++ b/templates/album/new.html.twig
@@ -14,5 +14,17 @@
 
     {{ include('album/_form.html.twig') }}
 
-    <button class="btn btn-danger ms-5 mt-3"><a href="{{ path('app_album_index') }}" class="link-underline link-underline-opacity-0 text-white">Torna enrere</a></button>
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-12">
+                <div class="d-flex justify-content-between">
+                    <button class="btn btn-danger"><a href="{{ path('app_album_index') }}"
+                                                                class="link-underline link-underline-opacity-0 text-white">Torna
+                            enrere</a></button>
+
+                    <button class="btn btn-outline-success">{{ button_label|default('Guardar') }}</button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
