--- a/templates/album/_form.html.twig
+++ b/templates/album/_form.html.twig
@@ -16,5 +16,18 @@
     </div>
 </div>
 {{ form_widget(form) }}
-{#<button class="btn btn-outline-success ms-5 mt-5">{{ button_label|default('Guardar') }}</button>#}
+
+<div class="container py-5">
+    <div class="row">
+        <div class="col-12">
+            <div class="d-flex justify-content-between">
+                <button class="btn btn-danger"><a href="{{ path('app_album_index') }}"
+                                                  class="link-underline link-underline-opacity-0 text-white">Torna
+                        enrere</a></button>
+                <button class="btn btn-outline-success">{{ button_label|default('Guardar') }}</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 {{ form_end(form) }}
