Arreglats els botons d'Editar i Crear de Cançons

--- a/templates/song/_form.html.twig
+++ b/templates/song/_form.html.twig
@@ -12,6 +12,17 @@
         </div>
     </div>
 </div>
-    {{ form_widget(form) }}
-<button class="btn btn-outline-success ms-5 mt-5">{{ button_label|default('Guardar') }}</button>
+{{ form_widget(form) }}
+<div class="container py-5">
+    <div class="row">
+        <div class="col-12">
+            <div class="d-flex justify-content-between">
+                <button class="btn btn-danger"><a href="{{ path('app_song_index') }}"
+                                                            class="link-underline link-underline-opacity-0 text-white">Torna
+                        enrere</a></button>
+                <button class="btn btn-outline-success">{{ button_label|default('Guardar') }}</button>
+            </div>
+        </div>
+    </div>
+</div>
 {{ form_end(form) }}
