--- a/templates/band/index.html.twig
+++ b/templates/band/index.html.twig
@@ -28,7 +28,7 @@
                         <th>Nom</th>
                         <th>Biografia</th>
                         <th>Imatge</th>
-                        <!--<th>accions</th>-->
+                        <!--<th>Accions</th>-->
                     </tr>
                     </thead>
                     <tbody>
